--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@types/node": "10.12.21",
     "@types/react": "16.8.1",
     "@types/react-dom": "16.0.11",
+    "antd": "^3.13.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.0",
     "typescript": "3.3.1"
   },
   "scripts": {
